[project]
name = "bosporus"
version = "0.0.0"
authors = [
  { name="Anna Moeller", email="anna.moeller@fau.de" },
]
requires-python = ">=3.9"
description = "Boundary effects in spatial graphs: error modeling and untangling strategies"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["scikit-learn",
                "scipy",
                "numpy",
                "pandas"]


[project.urls]
Homepage = "https://github.com/bionetslab/bosporus-package"
Issues = "https://github.com/bionetslab/bosporus-package/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
